# anchor

./: .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
examples/: spinning_square.rs  triangle_spiral.rs
src/: config.rs  context.rs  error.rs  game.rs  game_loop.rs  lib.rs  main.rs
src/core/: api.rs  config.rs  context.rs  error.rs  errors.rs  event_handler.rs  fps_limiter.rs  frame_phase.rs  game.rs  game_loop.rs  mod.rs
src/game/: api.rs  config.rs  context.rs  error.rs  game.rs  game_loop.rs  game_phase.rs  mod.rs
src/graphics/: anchor.rs  api.rs  batch_status.rs  bounds.rs  camera.rs  camera_manager.rs  canvas.rs  color.rs  config.rs  consts.rs  context.rs  drawable.rs  flat_pipeline.rs  font.rs  font2.rs  frame.rs  framebuffer.rs  glyph_sheet2.rs  graphics.rs  image.rs  image_atlas.rs  layer.rs  mod.rs  old_raw_window_handle_wrapper.rs  pixel_bounds.rs  projection.rs  relative_anchor.rs  shape.rs  shape_batch.rs  shape_pipeline.rs  shapes.rs  shared_bind_group_layouts.rs  sprite.rs  sprite_batch.rs  sprite_batch2.rs  sprite_pipeline.rs  sprite_pipeline2.rs  sprite_sheet.rs  text.rs  text_batch.rs  (+5 more)
src/graphics/shaders/: flat.wgsl  shape.wgsl  sprite.wgsl  sprite2.wgsl  text.wgsl
src/graphics/shape/: drawable_shape.rs  mod.rs  shape.rs  shape_builder.rs  shape_shader.wgsl
src/graphics/shapes/: mod.rs  shape.rs  shape.wgsl  shape_batch.rs  shape_pipeline.rs  shapes.rs
src/graphics/sprite/: mod.rs  sprite.rs  sprite_instance.rs  sprite_shader.wgsl  texture.rs  texture_shader.wgsl
src/graphics/sprites/: dynamic_sprite_sheet.rs  mod.rs  sprite.rs  sprite.wgsl  sprite_batch.rs  sprite_pipeline.rs  sprite_sheet.rs
src/graphics/text/: font.rs  font_atlas.rs  glyph_data.rs  glyph_instance_converter.rs  glyph_texture.rs  mod.rs  positioned_text.rs  text.rs  text.wgsl  text_batch.rs  text_instance.rs  text_pipeline.rs
src/graphics/texture/: mod.rs  texture.rs
src/input/: api.rs  context.rs  cursor.rs  keyboard.rs  mod.rs  mouse.rs  types.rs
src/physics/: mod.rs
src/platform/: api.rs  config.rs  context.rs  error.rs  fps_limiter.rs  frame_phase.rs  game.rs  game_loop.rs  mod.rs  timer.rs
src/time/: api.rs  config.rs  context.rs  frame_timer.rs  game_phase.rs  mod.rs
src/utils/: mod.rs  small_vec_set.rs  vec_set.rs
src/window/: api.rs  config.rs  context.rs  mod.rs
