[package]
name = "anchor"
version = "0.0.1"
edition = "2021"
description = "Modern 2D Game Framework"
authors = ["Tudor-Cristian Lechințan <lechintantudor02@gmail.com>"]
repository = "https://github.com/LechintanTudor/anchor"
keywords = ["gamedev"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["shape-builder"]
shape-builder = ["lyon"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck", "serde"] }
glyph_brush = "0.7"
image = "0.24"
ordered-float = "4.1"
pollster = "0.3"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
wgpu = "0.17"

# Optional dependencies
lyon = { version = "1.0", optional = true }

[dependencies.winit]
git = "https://github.com/rust-windowing/winit"
rev = "fac6110cb6bf960b7e32e97b0480fbb21d2a49f9"
features = ["serde"]
